Bug 779914 - Reset Mozilla Audio Data API in nsHTMLMediaElment::AbortExistingLoads(). r=doublec